--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -158,4 +158,17 @@ footer {
   input {
     height: auto !important;
   }
+  
+  #error_explanation {
+	  color: #f00;
+	  ul {
+		  list-style: none;
+		  margin: 0 0 18px 0;
+	  }
+  }
+  
+  .field_with_errors {
+	  @extend .control-group;
+	  @extend .error;
+  }
 }
